# etl-and-chill

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: pipeline.toml
docker/: entrypoint.sh  life-cron  run-sync.sh
docs/: etl_architecture.md  master_learning_guide.md  ml_approaches_for_life_data.md  oura_oauth.md  pipeline_extensions.md  pipeline_runbook.md
src/life/: __init__.py  cli.py  config.py  enums.py  logging.py  models.py
src/life/connectors/: __init__.py  base.py  notion.py  oura.py
src/life/dashboard/: app.py  data.py
src/life/enrichers/: __init__.py  openai_tags.py
src/life/inference/: __init__.py  cmdstan_adapter.py
src/life/normalizers/: __init__.py  base.py  notion_daily.py  oura_daily.py
src/life/oauth/: __init__.py  oura.py  token_store.py
src/life/pipeline/: __init__.py  backfill_legacy.py  shared.py  (+3 more)
tests/: test_cmdstan_adapter.py  test_connectors_api_shapes.py  test_dashboard_aggregation.py  test_dashboard_goals.py  test_dashboard_leaderboard.py  test_legacy_notion_parse.py  test_legacy_oura_parse.py  test_notion_normalizer.py  test_oauth_redirect_parse.py  test_oura_merge.py  test_oura_oauth_client.py  test_oura_oauth_http_flow.py  test_oura_oauth_status.py  test_oura_openapi_contract.py  test_oura_sync_skips_unauthorized_endpoint.py  test_pipeline_end_to_end_mocked.py  test_pipeline_sync_window.py  test_runtime_config.py  test_sync_empty_window.py  test_token_store.py
tests/fixtures/: oura_openapi_contract_snapshot.json
(+4 files in other folders)
